--- a/08-playbook.yaml
+++ b/08-playbook.yaml
@@ -4,4 +4,4 @@
   tasks:
    - name: variables from args
      ansible.builtin.debug:
-      msg: " hi {{ NAME }} ; GOOD MORING "
+      msg: " hi {{ NAME }}, GOOD MORING "
