--- a/11-playbook.yaml
+++ b/11-playbook.yaml
@@ -8,5 +8,9 @@
       name:"{{ item.name }}"
       state:"{{item.state}}"
     loop:
-    - {name: "mysql" , state: "present" }
-    - {name: "nodejs" , state: "present"}
+    - name: "mysql"
+      state: "present"
+
+    - name: "nodejs"
+      state: "absent"  
+    
